# upscaler

./: .clang-format  .dockerignore  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: config.h.in
docker/: Dockerfile
gst/: CMakeLists.txt
gst/elements/: CMakeLists.txt  gstelements.c
gst/elements/interpolator/: CMakeLists.txt  gstinterpolator.c  gstinterpolator.h  methods.cpp  methods.h
gst/elements/upscaler/: gstupscaler.c  gstupscaler.h  inference.h  openvino_inference.cpp  openvino_inference.h  openvino_inference_factory.cpp  openvino_inference_factory.h
gst/interpolator/: CMakeLists.txt  gstinterpolator.c  gstinterpolator.h
gst/upscaler/: CMakeLists.txt  gstupscaler.c
samples/: super-resolution.sh  videoscale.sh
