# ==============================================================================
# Copyright (C) 2019 floor10
#
# SPDX-License-Identifier: MIT
# ==============================================================================

cmake_minimum_required(VERSION 3.6)

add_subdirectory(interpolator)
add_subdirectory(upscaler)
